新增八股文及调整导航

--- a/src/views/home/findJob/前端八股文汇总背诵版.md
+++ b/src/views/home/findJob/前端八股文汇总背诵版.md
@@ -42,6 +42,8 @@
 
 21. 怎么重构页面
 
+35. 
+
     
 
 # CSS
@@ -107,6 +109,62 @@
 30. 解释一下回流与重绘
 
 31. 你知道 CSS 中不同属性设置为百分比\x 时对应的计算基准
+
+32. 回流和重绘
+
+33. 盒模型
+
+34. 有哪些CSS选择器
+
+35. css优先级
+
+36. css居中
+
+37. 元素margin合并
+
+38. BFC、IFC
+
+39. block、inline和inline-block的元素有什么差别
+
+40. display：none与visibility:hidden区别
+
+41. 隐藏元素的方法
+
+42. css画三角形
+
+43. 盒模型盒子的宽度计算
+
+44. 两种盒模型对比
+
+45. 有哪些CSS选择器
+
+46. css优先级
+
+47. css优先级计算
+
+48. div .div #div div>div>div优先级
+
+49. class、id、tag 的优先级
+
+50. 为什么不推荐用多层css选择器
+
+51. css选择器处理
+
+52. css居中
+
+53. 多列等高布局
+
+54. 元素margin合并
+
+55. BFC、IFC
+
+56. 如何清除浮动
+
+57. block、inline和inline-block的元素有什么差别
+
+58. display属性
+
+59. 
 
     
 
@@ -221,7 +279,49 @@
 
 54. js 语句末尾分号是否可以省略
 
-57. 前端埋点的实现，说说看思路；怎么做 JS 代码 Error 统计
+55. 前端埋点的实现，说说看思路；怎么做 JS 代码 Error 统计
+
+56. 箭头函数和普通函数有什么区别
+
+57. 讲讲promise
+58. apply、bind、call
+59. typescript泛型
+60. 实现防抖方法
+61. 实现深拷贝和浅拷贝
+62. 讲一下event loop
+63. 如何判断数组
+64. js数据类型
+65. 什么是柯里化
+66. 如何理解闭包
+67. 如何理解原型与原型链
+68. js继承
+69. 类型判断
+70. null和undefined的区别
+71. new一个对象发生了什么
+72. 手写promise
+
+73. 实现Promise.all,Promise.race,Promise.any
+
+74. 手写promise
+
+75. 如何实现Promise.all、Promise.race和Promise.any方法。
+76. Promise.all，Promise.race区别是什么？手写一个方法，使用Promise.all，实现所有都resolved/reject时才返回，并返回所有的结果
+77. promise的catch后面跟一个then会怎么执行
+78. callback改成promise
+79. 如何理解js的作用域
+80. 函数表达式和函数声明有什么区别
+81. 讲一下变量提升（js预编译），为什么会有变量提升？
+82. 讲讲promise，promise的3种状态和状态转换。Promise中回调函数是同步的还是异步的？then的链式调用是同步的还是异步的？
+83. js如何判断一个变量是数组？
+84. js数据类型都有哪些？
+85.  ==和===区别
+86. 讲一下js中的包装类型
+87. 讲一下js类型的隐式转换
+88. typeof判断哪个类型会出错？Object.prototype.toString.call()判断哪个类型会出错？
+89. typeof能判断函数吗？能判断null吗？
+90. 如何判断一个对象为空
+91. typeof和instanceof的区别
+92. null和undefined有什么区别
 
 
 
@@ -252,11 +352,23 @@
 
 12. 跨标签页通讯；域名发散与域名收敛；什么是同源策略；如何解决跨越问题； 如何实现浏览器内多个标签页之间的通信；什么是浏览器的同源政策；如何解决跨域问题；服务器代理转发时,该如何处理 cookie；简单谈一下 cookie ；
 
+13. 从输入url到看到界面的过程
+
+14. http各个版本的改进
+
+15. https的通信过程
+
+16. https为什么是安全的
+
+17. 前端性能优化方法
+
+18. 网络攻击有哪些
+
     
 
 # Vue 相关
 
-1. 路由的钩子；vue-router的路由守卫；router和route的区别；路由传参和取参；路由钩子beforeEach三个参数；vue-router中的路由守卫有哪些；vue-router原理以及两种模式区别；vue-router用法；讲讲前端路由原理，比较一下history和hash这两种路由；前端有几种缓存方式；路由的hash和history模式的区别；router和route的区别；如何设置动态路由；路由守卫；vue-router 中的导航钩子函数；$route 和 $router 的区别；前端路由；什么是“前端路由”?什么时候适合使用“前端路由”?“前端路由”有哪些优点和缺点；Vue的路由实现:hash模式 和 history模式；Vue路由的钩子函数
+1. 路由的钩子；vue-router的路由守卫；router和route的区别；路由传参和取参；路由钩子beforeEach三个参数；vue-router中的路由守卫有哪些；vue-router原理以及两种模式区别；vue-router用法；讲讲前端路由原理，比较一下history和hash这两种路由；前端有几种缓存方式；路由的hash和history模式的区别；router和route的区别；如何设置动态路由；路由守卫；vue-router 中的导航钩子函数；$route 和 $router 的区别；前端路由；什么是“前端路由”?什么时候适合使用“前端路由”?“前端路由”有哪些优点和缺点；Vue的路由实现:hash模式 和 history模式；Vue路由的钩子函数；vue-router原理以及两种模式区别
 
 2. Virtual Dom（虚拟DOM）；diff 算法；Vue的diff算法；Vue的数据为什么频繁变化但只会更新一次；讲讲Vue的虚拟DOM原理以及好处是什么，相对于手动操作DOM性能更好吗；讲讲Vue diff算法；vue2中虚拟DOM更新时标记差异怎么实现的，介绍一下它的原理；对虚拟DOM的理解；虚拟DOM就一定比真实DOM更快吗；虚拟DOM的解析过程；DIFF算法原理；什么是 Virtual DOM?为什么 Virtual DOM 比原生 DOM 快；如何比较两个 DOM 树的差异
 
@@ -264,11 +376,11 @@
 
 4. vue响应式原理；vue响应式原理；vue的模板渲染；vue的compile过程；vue框架原理；为什么Vue是渐进式框架；Vuex工作机制；vue3中的ref、toRef、toRefs；Object.defineProperty 介绍；使用 Object.defineProperty() 来进行数据劫持有什么缺点；什么是 Proxy
 
-5. 计算属性和监听属性；computed和watch的区别；vue组件watch中deep和immediate的作用；computed和method的区别；vue的computed和watch的实现原理；computed和watch区别是什么；vuex的使用；computed 和 watch 的差异；computed 和 watch 区别
+5. 计算属性和监听属性；computed和watch的区别；vue组件watch中deep和immediate的作用；computed和method的区别；vue的computed和watch的实现原理；computed和watch区别是什么；vuex的使用；computed 和 watch 的差异；computed 和 watch 区别；vue computed和watch的区别
 
 6. v-model原理；数据双向绑定原理；关于vue3双向绑定的实现；v-model的作用；vue数据双向绑定原理；讲讲Vue双向绑定原理；vue 双向数据绑定原理；Vue实现数据双向绑定的原理
 
-7. Vue生命周期；vue组件的生命周期；vue父子组件挂载顺序；Vue父子组件生命周期触发顺序是怎样的；Vue 的生命周期是什么；Vue 的各个生命阶段是什么；Vue的生命周期
+7. Vue生命周期；vue组件的生命周期；vue父子组件挂载顺序；Vue父子组件生命周期触发顺序是怎样的；Vue 的生命周期是什么；Vue 的各个生命阶段是什么；Vue的生命周期；vue父子组件挂载顺序
 
 8. vue的keep-alive组件；vue2中keep-alive怎么实现缓存效果的，它的原理是什么；说说Vue的keep-alive使用及原理；keep-alive 组件有什么作用；对keep-alive 的了解
 
@@ -308,6 +420,110 @@
 
 24. slot
 
+25. v-for和v-if放在一起用好吗
+
+26. vue数据双向绑定原理
+
+27. Vue的diff算法
+
+28. vue nextTick
+
+29. vue的keep-alive组件
+
+30. vue父子组件通信,兄弟组件通信
+
+31. mvvm与mvc
+
+32. vuex的使用
+
+33. vue-router中的路由守卫有哪些
+
+34. vuex的使用
+
+35. v-model的作用
+
+36. vue框架原理
+
+37. vue常用指令
+
+38. Vue3和Vue2的区别
+
+39.  vue父子组件挂载顺序 
+
+40. vue computed和watch的区别
+
+41. vue组件data为什么是函数
+
+42. vue组件data用箭头函数行不行
+
+43. Vuex工作机制 
+
+44. vue-router原理以及两种模式区别
+
+45. vue-router用法
+
+46. v-if和v-show的区别
+
+47. v-for和v-if放在一起用好吗
+
+48. vue组件样式污染
+
+49. Vue如何给一个对象添加新的属性
+
+50. vue响应式原理
+
+51. vue的compile过程
+
+52. vue的computed和watch的实现原理
+
+53.  vue的模板渲染
+
+54. vue数据双向绑定原理
+
+55. vue怎么检测到数组的变化
+
+56. Vue的diff算法
+
+57. vue nextTick
+
+58. vue的keep-alive组件
+
+59. Vue的数据为什么频繁变化但只会更新一次
+
+60. process.nextTick和Vue.nextTick
+
+61. vue组件watch中deep和immediate的作用
+
+62. slot
+
+63. vue异步渲染、nextTick 
+
+64. vue如何实现自定义指令
+
+65. Vue.use方法的使用
+
+66. vue和react的区别
+
+67. vue父子组件通信，兄弟组件通信
+
+68. vue的eventbus的实现
+
+69. React、Vue和JQuery的选型
+
+70. vue和jquery的区别
+
+71. computed和watch的区别
+
+72. computed和method的区别
+
+73. vue组件的生命周期
+
+74. 为什么Vue是渐进式框架
+
+75. mvvm与mvc
+
+76. 
+
     
 
 # webpack
@@ -330,7 +546,45 @@
 
 9. 说一下你对Monorepo的理解；你在项目是怎么做Monorepo；为什么pnpm快
 
-   
+10. webpack原理
+
+11. webpack的tree-shaking
+
+12. webpack优化
+
+13. webpack的plugin和loader
+
+14. 常见的webpack plugin和loader
+
+15. webpack使用
+
+16. webpack的splitChunks的使用
+
+17.  webpack原理
+
+18. webpack的tree-shaking
+
+19. require引入的模块webpack能做Tree-Shaking吗？
+
+20. webpack如何动态加载
+
+21. webpack能动态加载require引入的模块吗？
+
+22.  webpack优化
+
+23. webpack模块热重载
+
+24.  happypack
+
+25. webpack的plugin和loader
+
+26. loader的加载顺序
+
+27. 常见的webpack plugin和loader
+
+28. 
+
+    
 
 # 前端性能优化
 
@@ -338,15 +592,39 @@
 
 2. 节流和防抖；谈一下防抖、节流的概念；如何实现防抖和节流；介绍一下 js 的节流与防抖
 
-3. SPA首屏为什么加载慢？
+3. SPA首屏为什么加载慢
 
 4. 为什么要做性能优化
 
-5. 常见性能优化有哪些关键指标？
+5. 常见性能优化有哪些关键指标
 
 6. 性能优化方式有哪些：HTML & CSS、JS、Vue、Webpack优化、网络优化
 
-   
+7. 前端性能优化方法
+
+8. 白屏和首屏时间
+
+9. 浏览器渲染过程
+
+10. js动画的性能问题
+
+11. setTimeout和requestAnimationFrame的区别
+
+12. 什么会阻塞dom渲染
+
+13.  script标签什么情况不阻塞渲染
+
+14. FP、FCP、FMP
+
+15. 回流和重绘
+
+16. 用户页面打开很慢，有哪些优化方式？
+
+17. css和js加载，是同步还是异步？
+
+18. 
+
+    
 
 # 在线笔试题
 
@@ -378,12 +656,385 @@
 
 14. 一个列表,假设有 100000 个数据,这个该怎么办
 
+15. 0.1 + 0.2 != 0.3原因是什么？
+
+16. number类型最大值是多少？如果后台发的数据超过这个值怎么办？
+
+17. 12和12.0有什么区别？
+
+18. 实现每隔一秒输出数组中的一个数字
+
+19. 为什么3.tostring()会报错？
+
+20. 代码的执行结果
+
+    ```
+    function Foo() {
+      getName = function () {
+        console.log(1)
+      }
+      console.log('this is ' + this)
+      return this
+    }
     
+    
+    Foo.getName = function () {
+      console.log(2)
+    }
+    Foo.prototype.getName = function () {
+      console.log(3)
+    }
+    var getName = function () {
+      console.log(4)
+    }
+    function getName () {
+      console.log(5)
+    }
+    
+    
+    Foo.getName();
+    getName();
+    Foo().getName();
+    getName();
+    new Foo.getName();
+    new Foo().getName();
+    new new Foo().getName();
+    ```
+
+21. 代码的执行结果
+
+    ```
+    window.name = 'ByteDance';
+    function A () {
+      this.name = 123;
+    }
+    A.prototype.getA = function(){
+      console.log(this);
+      return this.name + 1;
+    }
+    let a = new A();
+    let funcA = a.getA;
+    funcA();
+    ```
+
+22. 说出代码的执行结果？如果只改最后一行怎么让它也能输出aaa？
+
+    ```
+    var obj = { 
+      name: 'aaa',
+      getName: function() {
+          console.log(this.name);
+      }
+    }
+    var get = obj.getName;
+    obj.getName();
+    get();
+    ```
+
+23. 代码的执行结果
+
+    ```
+    var name = 'win';
+    const obj = {
+        name: 'obj',
+        a: () => {
+            console.log(this.name);
+        }
+    };
+    const obj1 = {
+        name: 'obj1'
+    };
+    obj.a.call(obj1);
+    ```
+
+24. 说出下面代码执行结果
+
+    ```
+    const promise = new Promise((resolve,reject)=>{
+        console.log(1);
+        resolve();
+        console.log(2);
+        reject()
+    })
+    setTimeout(()=>{console.log(5)},0)
+    promise.then(()=>{console.log(3)})
+    .then(()=>{console.log(6)})
+    .catch(()=>{console.log(7)})
+    console.log(4)
+    ```
+
+25. 说出代码执行结果
+
+    ```
+    const first = () => (new Promise((resolve, reject) => {
+        console.log(3);
+        let p = new Promise((resolve, reject) => {
+            console.log(7);
+            setTimeout(() => {
+                console.log(5);
+                resolve();
+            }, 0);
+            resolve(1);
+        });
+        resolve(2);
+        p.then((arg) => {
+            console.log(arg);
+        });
+    }));
+    first().then((arg) => {
+        console.log(arg);
+    });
+    console.log(4);
+    ```
+
+26. 说出代码执行结果
+
+    ```
+    console.log(1);
+    new Promise(resolve => {
+        resolve();
+        console.log(2);
+    }).then(() => {
+        console.log(3);
+    })
+    setTimeout(() => {
+        console.log(4);
+    }, 0);
+    console.log(5);
+    ```
+
+27. 说出代码执行结果
+
+    ```
+    Promise.resolve()
+    .then(() => {
+        console.log('1');
+    })
+    .then(() => {
+        console.log('2');
+    });
+    
+    
+    setTimeout(() => {
+        Promise.resolve()
+        .then(() => {
+            console.log('3');
+        })
+        .then(() => {
+            console.log('4');
+        });
+        setInterval(() => {
+            console.log('5');
+        }, 3000);
+        console.log('6');
+    }, 0);
+    ```
+
+28. 说出代码执行结果
+
+    ```
+    setTimeout(function() {
+        console.log(1);
+    }, 0);
+    console.log(2);
+    async function s1() {
+        console.log(7)
+        await s2();
+        console.log(8);
+    }
+    asycn function s2() {
+        console.log(9);
+    }
+    s1();
+    new Promise((resolve, reject) => {
+        console.log(3);
+        resolve();
+        console.log(6);
+    }).then(() => console.log(4))
+    console.log(5);
+    ```
+
+29. 代码执行结果
+
+    ```
+    function fn() {
+      return new Promise((resolve, reject) => {
+          setTimeout(() => {
+              reject('error');
+          }, 1000);
+      });
+    }
+    const foo = async () => {
+       try {
+         await fn();
+      } catch (e) {
+          console.log('lala', e);  // some error
+      }
+    }
+    foo();
+    ```
+
+30. 循环打印数字
+
+    ```
+    for (var i = 0; i < 3; i++) {
+        document.body.addEventListener(
+            'click',
+            function() {
+                console.log(i);
+            }
+        )
+    }
+    ```
+
+    上面代码输出什么？
+
+    如果想0 1 2，怎么做？
+
+31. 代码执行结果
+
+    ```
+    var count = 10;
+    function a() {
+     return count + 10;
+    }
+    function b() {
+     var count = 20;
+     return a();
+    }
+    console.log(b());
+    ```
+
+32. 说出代码执行结果
+
+    ```
+    // 代码段1
+    console.log(a);
+    a = 1;
+    
+    
+    // 代码段2
+    console.log(b);
+    var b = 2; 
+    
+    
+    // 代码段3
+    var c = 1;
+    let c;
+    console.log(c);
+    ```
+
+33. 说出代码执行结果
+
+    ```
+    // 1
+    var a = 10;
+    function b() {
+        a = 100;
+    }
+    b();
+    console.log(a);
+     
+    // 2
+    var a = 10;
+    function b() {
+        a = 100;
+        function a() {};
+    }
+    b();
+    console.log(a);
+     
+    // 3
+    var a = 10;
+    function b() {
+        var a = 100;
+    }
+    b();
+    console.log(a);
+    
+    
+    // 4
+    var resource = ['a.png', 'b.png', 'c.png', 'd.png', 'e.png', 'f.png'];
+    for(var i = 0; i < resource.length; i++) {
+        var img = new Image();
+        img.src = resource[i];
+        img.onload = funtion(){
+            console.log(i);
+        }
+    }
+    ```
+
+30. 代码执行结果
+
+    ```
+    var a = {
+        name:1,
+        age:2,
+    }
+    var b = a;
+    b.name = 3；
+    
+    
+    console.log(a);
+    console.log(b);
+    ```
+
+31. 代码执行结果
+
+    ```
+    const o1 = {};
+    const o2 = {};
+    console.log(o1 == o2);
+    console.log(o1 === o2);
+    ```
+
+32. 代码执行结果
+
+    ```
+    [] + []
+    [] + ![]
+    [] == ![]
+    [] == []
+    ```
+
+33. 代码执行结果
+
+    ```
+    null == 0
+    null > 0
+    null < 0
+    null >= 0
+    null <= 0
+    ```
+
+34. 代码执行结果
+
+    ```
+    let num = 10;
+    function ch(num) {
+        num = 12;
+    }
+    ch(num);
+    console.log(num);
+    
+    
+    
+    let obj = {};
+    function ch1(obj) {
+        obj.a = 'a';
+    }
+    ch1(obj);
+    console.log(obj.a);
+    ```
+
+35. 
 
 
 # 其他
 
 1. 类组件的生命周期，函数组件使用哪些hook来代替的哪些生命周期
+
+   
 
 2. 对于Fiber架构理解
 
@@ -404,3 +1055,17 @@
 10. 那堆和栈的概念有什么区别呢
 
 11. 单例模式模式是什么；策略模式是什么；代理模式是什么；中介者模式是什么；适配器模式是什么；观察者模式和发布订阅模式有什么不同；发布订阅模式的实现；手写一个观察者模式
+
+12. react fiber', '
+
+13. react diff算法', '
+
+14. 函数式组件和类组件的区别', '
+
+15. React性能优化', '
+
+16. React列表的key', '
+
+17. useState和userRef', '
+
+18. 常用的hook', '
