新增八股文知识点

--- a/src/views/home/findJob/前端八股文汇总背诵版.md
+++ b/src/views/home/findJob/前端八股文汇总背诵版.md
@@ -164,7 +164,47 @@
 
 58. display属性
 
-59. 
+59. 说说你对盒子模型的理解
+
+60. css选择器有哪些？优先级？哪些属性可以继承
+
+61. 说说em/px/rem/vh/vw区别
+
+62. 说说设备像素、css像素、设备独立像素、dpr、ppi 之间的区别
+
+63. css中，有哪些方式可以隐藏页面元素？区别
+
+64. 谈谈你对BFC的理解
+
+65. 元素水平垂直居中的方法有哪些？如果元素不定宽高呢
+
+66. 如何实现两栏布局，右侧自适应？三栏布局中间自适应呢
+
+67. 说说flexbox（弹性盒布局模型）,以及适用场景
+
+68. 介绍一下grid网格布局
+
+69. CSS3新增了哪些新特性
+
+70. css3动画有哪些
+
+71. 怎么理解回流跟重绘？什么场景下会触发
+
+72. 什么是响应式设计？响应式设计的基本原理是什么？如何做
+
+73. 如果要做优化，CSS提高性能的方法有哪些
+
+74. 如何实现单行／多行文本溢出的省略样式
+
+75. 如何使用css完成视差滚动效果
+
+76. CSS如何画一个三角形？原理是什么
+
+77. 让Chrome支持小于12px 的文字方式有哪些？区别
+
+78. 说说对Css预编语言的理解？有哪些区别?
+
+79. 
 
     
 
@@ -314,7 +354,7 @@
 82. 讲讲promise，promise的3种状态和状态转换。Promise中回调函数是同步的还是异步的？then的链式调用是同步的还是异步的？
 83. js如何判断一个变量是数组？
 84. js数据类型都有哪些？
-85.  ==和===区别
+85. ==和===区别
 86. 讲一下js中的包装类型
 87. 讲一下js类型的隐式转换
 88. typeof判断哪个类型会出错？Object.prototype.toString.call()判断哪个类型会出错？
@@ -322,6 +362,131 @@
 90. 如何判断一个对象为空
 91. typeof和instanceof的区别
 92. null和undefined有什么区别
+93. 说说Javascript中的数据类型？区别
+94. Javscript数组的常用方法有哪些
+95. Javascript字符串的常用方法有哪些
+96. 谈谈 Javascript 中的类型转换机制
+97. == 和 ===区别，分别在什么情况使用
+98. 深拷贝浅拷贝的区别？如何实现一个深拷贝
+99. 说说你对闭包的理解
+100. 说说你对作用域链的理解
+101. JavaScript原型，原型链 ? 有什么特点
+102. Javascript如何实现继承
+103. 谈谈this对象的理解
+104. JavaScript中执行上下文和执行栈是什么
+105. 说说JavaScript中的事件模型
+106. typeof 与 instanceof 区别
+107. 解释下什么是事件代理？应用场景
+108. 说说new操作符具体干了什么
+109. ajax原理是什么？如何实现
+110. bind、call、apply 区别？如何实现一个bind
+111. 说说你对正则表达式的理解？应用场景
+112. 说说你对事件循环的理解
+113. DOM常见的操作有哪些
+114. 说说你对BOM的理解，常见的BOM对象你了解哪些
+115. 举例说明你对尾递归的理解，有哪些应用场景
+116. 说说 JavaScript 中内存泄漏的几种情况
+117. Javascript本地存储的方式有哪些？区别及应用场景
+118. 说说你对函数式编程的理解？优缺点
+119. Javascript中如何实现函数缓存？函数缓存有哪些应用场景
+120. 说说 Javascript 数字精度丢失的问题，如何解决
+121. 什么是防抖和节流？有什么区别？如何实现
+122. 如何判断一个元素是否在可视区域中
+123. 大文件上传如何做断点续传
+124. 如何实现上拉加载，下拉刷新
+125. 什么是单点登录？如何实现
+126. web常见的攻击方式有哪些？如何防御
+127. JavaScript深入之从原型到原型链
+128. JavaScript深入之词法作用域和动态作用域
+129. JavaScript深入之执行上下文栈
+130. JavaScript深入之变量对象
+131. JavaScript深入之作用域链
+132. JavaScript深入之从ECMAScript规范解读this
+133. JavaScript深入之执行上下文
+134. JavaScript深入之闭包
+135. JavaScript深入之参数按值传递
+136. JavaScript深入之call和apply的模拟实现
+137. JavaScript深入之bind的模拟实现
+138. JavaScript深入之new的模拟实现
+139. JavaScript深入之类数组对象与arguments
+140. JavaScript深入之创建对象的多种方式以及优缺点
+141. JavaScript深入之继承的多种方式以及优缺点
+142. JavaScript深入系列15篇正式完结！
+143. JavaScript深入之浮点数精度
+144. JavaScript深入之头疼的类型转换(上)
+145. JavaScript深入之头疼的类型转换(下)
+146. JavaScript专题之跟着underscore学防抖
+147. JavaScript专题之跟着underscore学节流
+148. JavaScript专题之数组去重
+149. JavaScript专题之类型判断(上)
+150. JavaScript专题之类型判断(下)
+151. JavaScript专题之深浅拷贝
+152. JavaScript专题之从零实现jQuery的extend
+153. JavaScript专题之如何求数组的最大值和最小值
+154. JavaScript专题之数组扁平化
+155. JavaScript专题之学underscore在数组中查找指定元素
+156. JavaScript专题之jQuery通用遍历方法each的实现
+157. JavaScript专题之如何判断两个对象相等
+158. JavaScript专题之函数柯里化
+159. JavaScript专题之偏函数
+160. JavaScript专题之惰性函数
+161. JavaScript专题之函数组合
+162. JavaScript专题之函数记忆
+163. JavaScript专题之递归
+164. JavaScript专题之乱序
+165. JavaScript专题之解读 v8 排序源码
+166. JavaScript专题系列20篇正式完结！
+167. JavaScript专题之花式表示26个字母
+
+
+
+# ES6
+
+1. 说说var、let、const之间的区别
+2. ES6中数组新增了哪些扩展
+3. ES6中对象新增了哪些扩展
+4. ES6中函数新增了哪些扩展
+5. ES6中新增的Set、Map两种数据结构怎么理解
+6. 你是怎么理解ES6中 Promise的？使用场景
+7. 怎么理解ES6中 Generator的？使用场景
+8. 你是怎么理解ES6中Proxy的？使用场景
+9. 你是怎么理解ES6中Module的？使用场景
+10. 你是怎么理解ES6中 Decorator 的？使用场景
+11. ES6 系列之 let 和 const
+12. ES6 系列之模板字符串
+13. ES6 系列之箭头函数
+14. ES6 系列之模拟实现 Symbol 类型
+15. ES6 系列之迭代器与 for of
+16. ES6 系列之模拟实现一个 Set 数据结构
+17. ES6 系列之 WeakMap
+18. ES6 系列之我们来聊聊 Promise
+19. ES6 系列之 Generator 的自动执行
+20. ES6 系列之我们来聊聊 Async
+21. ES6 系列之异步处理实战
+22. ES6 系列之 Babel 将 Generator 编译成了什么样子
+23. ES6 系列之 Babel 将 Async 编译成了什么样子
+24. ES6 系列之 Babel 是如何编译 Class 的(上)
+25. ES6 系列之 Babel 是如何编译 Class 的(下)
+26. ES6 系列之 defineProperty 与 proxy
+27. ES6 系列之模块加载方案
+28. ES6 系列之我们来聊聊装饰器
+29. ES6 系列之私有变量的实现
+30. ES6 完全使用手册
+31. 
+
+
+
+# TypeScript（未实际涉及，待补充）
+
+1.  
+2.  
+
+
+
+# Node.js（未实际涉及，待补充）
+
+1.  
+2.  
 
 
 
@@ -352,21 +517,57 @@
 
 12. 跨标签页通讯；域名发散与域名收敛；什么是同源策略；如何解决跨越问题； 如何实现浏览器内多个标签页之间的通信；什么是浏览器的同源政策；如何解决跨域问题；服务器代理转发时,该如何处理 cookie；简单谈一下 cookie ；
 
-13. 从输入url到看到界面的过程
+13.  Cookie 和 SameSite 属性
 
-14. http各个版本的改进
 
-15. https的通信过程
 
-16. https为什么是安全的
+# HTTP
 
-17. 前端性能优化方法
+1. 从输入url到看到界面的过程
 
-18. 网络攻击有哪些
+2. http各个版本的改进
+
+3. https的通信过程
+
+4. https为什么是安全的
+
+5. 前端性能优化方法
+
+6. 网络攻击有哪些
+
+7. 什么是HTTP? HTTP 和 HTTPS 的区别
+
+8. 为什么说HTTPS比HTTP安全? HTTPS是如何保证安全的
+
+9. 如何理解UDP 和 TCP? 区别? 应用场景
+
+10. 如何理解OSI七层模型
+
+11. 如何理解TCP/IP协议
+
+12. DNS协议 是什么？说说DNS 完整的查询过程
+
+13. 如何理解CDN？说说实现原理
+
+14. 说说 HTTP1.0/1.1/2.0 的区别
+
+15. 说说HTTP 常见的状态码有哪些，适用场景
+
+16. 说一下 GET 和 POST 的区别
+
+17. 说说 HTTP 常见的请求头有哪些? 作用
+
+18. 说说地址栏输入 URL 敲下回车后发生了什么
+
+19. 说说TCP为什么需要三次握手和四次挥手
+
+20. 说说对WebSocket的理解？应用场景？
+
+21. 
 
     
 
-# Vue 相关
+# Vue 
 
 1. 路由的钩子；vue-router的路由守卫；router和route的区别；路由传参和取参；路由钩子beforeEach三个参数；vue-router中的路由守卫有哪些；vue-router原理以及两种模式区别；vue-router用法；讲讲前端路由原理，比较一下history和hash这两种路由；前端有几种缓存方式；路由的hash和history模式的区别；router和route的区别；如何设置动态路由；路由守卫；vue-router 中的导航钩子函数；$route 和 $router 的区别；前端路由；什么是“前端路由”?什么时候适合使用“前端路由”?“前端路由”有哪些优点和缺点；Vue的路由实现:hash模式 和 history模式；Vue路由的钩子函数；vue-router原理以及两种模式区别
 
@@ -448,7 +649,7 @@
 
 38. Vue3和Vue2的区别
 
-39.  vue父子组件挂载顺序 
+39. vue父子组件挂载顺序 
 
 40. vue computed和watch的区别
 
@@ -476,7 +677,7 @@
 
 52. vue的computed和watch的实现原理
 
-53.  vue的模板渲染
+53. vue的模板渲染
 
 54. vue数据双向绑定原理
 
@@ -522,9 +723,88 @@
 
 75. mvvm与mvc
 
-76. 
+76. 说说你对vue的理解
 
-    
+77. 说说你对双向绑定的理解
+
+78. 说说你对SPA（单页应用）的理解
+
+79. Vue中的v-show和v-if怎么理解
+
+80. Vue实例挂载的过程中发生了什么
+
+81. 说说你对Vue生命周期的理解
+
+82. 为什么Vue中的v-if和v-for不建议一起用
+
+83. SPA（单页应用）首屏加载速度慢怎么解决
+
+84. 为什么data属性是一个函数而不是一个对象
+
+85. Vue中给对象添加新属性界面不刷新
+
+86. Vue中组件和插件有什么区别
+
+87. Vue组件间通信方式都有哪些
+
+88. 说说你对nexttick的理解
+
+89. 说说你对vue的mixin的理解，有什么应用场景
+
+90. 说说你对slot的理解？slot使用场景有哪些
+
+91. Vue.observable你有了解过吗？说说看
+
+92. 你知道vue中key的原理吗？说说你对它的理解
+
+93. 怎么缓存当前的组件？缓存后怎么更新？说说你对keep-alive的理解是什么
+
+94. Vue常用的修饰符有哪些？有什么应用场景
+
+95. 你有写过自定义指令吗？自定义指令的应用场景有哪些
+
+96. Vue中的过滤器了解吗？过滤器的应用场景有哪些
+
+97. 什么是虚拟DOM？如何实现一个虚拟DOM？说说你的思路
+
+98. 了解过vue中的diff算法吗？说说看
+
+99. Vue项目中有封装过axios吗？怎么封装的
+
+100. 你了解Axios的原理吗？有看过它的源码吗
+
+101. SSR解决了什么问题？有做过SSR吗？你是怎么做的
+
+102. 说下你的Vue项目的目录结构，如果是大型项目你该怎么划分结构和划分组件呢
+
+103. Vue要做权限管理该怎么做？控制到按钮级别的权限怎么做
+
+104. 跨域是什么？Vue项目中你是如何解决跨域的呢
+
+105. Vue项目如何部署？有遇到布署服务器后刷新404问题吗
+
+106. 你是怎么处理vue项目中的错误的
+
+107. Vue3有了解过吗？能说说跟Vue2的区别吗？
+
+108. Vue3.0的设计目标是什么？做了哪些优化
+
+109. Vue3.0 性能提升主要是通过哪几方面体现的
+
+110. Vue3.0里为什么要用 Proxy API 替代 defineProperty API
+
+111. Vue3.0 所采用的 Composition Api 与 Vue2.x 使用的 Options Api 有什么不同
+
+112. 说说Vue 3.0中Treeshaking特性？举例说明一下
+
+113. 用Vue3.0 写过组件吗？如果想实现一个 Modal你会怎么设计？
+
+
+
+# React（未实际涉及，待补充）
+
+1.  
+2.  
 
 # webpack
 
@@ -560,7 +840,7 @@
 
 16. webpack的splitChunks的使用
 
-17.  webpack原理
+17. webpack原理
 
 18. webpack的tree-shaking
 
@@ -570,11 +850,11 @@
 
 21. webpack能动态加载require引入的模块吗？
 
-22.  webpack优化
+22. webpack优化
 
 23. webpack模块热重载
 
-24.  happypack
+24. happypack
 
 25. webpack的plugin和loader
 
@@ -582,9 +862,44 @@
 
 27. 常见的webpack plugin和loader
 
-28. 
+28. 说说你对webpack的理解？解决了什么问题
 
-    
+29. 说说webpack的构建流程
+
+30. 说说webpack中常见的Loader？解决了什么问题
+
+31. 说说webpack中常见的Plugin？解决了什么问题
+
+32. 说说Loader和Plugin的区别？编写Loader，Plugin的思路
+
+33. 说说webpack的热更新是如何做到的？原理是什么
+
+34. 说说webpack proxy工作原理？为什么能解决跨域
+
+35. 说说如何借助webpack来优化前端性能
+
+36. 如何提高webpack的构建速度
+
+37. 与webpack类似的工具还有哪些？区别？
+
+38. 
+
+
+
+# Vite（待补充）
+
+1.  
+2.  
+
+
+
+# Rollup（待补充）
+
+1.  
+
+2.  
+
+   
 
 # 前端性能优化
 
@@ -1027,14 +1342,13 @@
     console.log(obj.a);
     ```
 
+34. 
 35. 
 
 
 # 其他
 
 1. 类组件的生命周期，函数组件使用哪些hook来代替的哪些生命周期
-
-   
 
 2. 对于Fiber架构理解
 
@@ -1056,16 +1370,64 @@
 
 11. 单例模式模式是什么；策略模式是什么；代理模式是什么；中介者模式是什么；适配器模式是什么；观察者模式和发布订阅模式有什么不同；发布订阅模式的实现；手写一个观察者模式
 
-12. react fiber', '
+12. react fiber
 
-13. react diff算法', '
+13. react diff算法
 
-14. 函数式组件和类组件的区别', '
+14. 函数式组件和类组件的区别
 
-15. React性能优化', '
+15. React性能优化
 
-16. React列表的key', '
+16. React列表的key
 
-17. useState和userRef', '
+17. useState和userRef
 
-18. 常用的hook', '
+18. 常用的hook
+
+19. 说说你对版本管理的理解？常用的版本管理工具有哪些
+
+20. 说说你对Git的理解
+
+21. 说说Git中 fork, clone,branch这三个概念，有什么区别
+
+22. 说说Git常用的命令有哪些
+
+23. 说说Git 中 HEAD、工作树和索引之间的区别
+
+24. 说说对git pull 和 git fetch 的理解？有什么区别
+
+25. 说说你对git stash 的理解？应用场景
+
+26. 说说你对git rebase 和 git merge的理解？区别
+
+27. 说说 git 发生冲突的场景？如何解决
+
+28. 说说你对git reset 和 git revert 的理解？区别？
+
+29. 说说你对操作系统的理解？核心概念有哪些
+
+30. 说说什么是进程？什么是线程？区别
+
+31. 说说 linux系统下 文件操作常用的命令有哪些
+
+32. 说说 linux 系统下 文本编辑常用的命令有哪些
+
+33. 说说你对 linux 用户管理的理解？相关的命令有哪些
+
+34. 说说你对输入输出重定向和管道的理解？应用场景
+
+35. 说说你对 shell 的理解？常见的命令
+
+36. 说说对设计模式的理解？常见的设计模式有哪些
+
+37. 说说你对单例模式的理解？如何实现
+
+38. 说说你对工厂模式的理解？应用场景
+
+39. 说说你对策略模式的理解？应用场景
+
+40. 说说你对代理模式的理解？应用场景
+
+41. 说说你对发布订阅、观察者模式的理解？区别
+
+42. 
